# katana-render-runtime

./: .gitattributes  .gitignore  AGENTS.md  Cargo.toml  Justfile  LICENSE  README.md  biome.json  clippy.toml  lefthook.yml  package.json  tsconfig.json
crates/katana-canvas-forge/: Cargo.toml
crates/katana-canvas-forge-cli/: Cargo.toml
crates/katana-canvas-forge-cli/src/: commands.rs  diagram_cmd.rs  diagram_cmd_tests.rs  export_cmd.rs  export_debug_cmd.rs  export_debug_cmd_tests.rs  file_ops.rs  main.rs  reference_cmd.rs
crates/katana-canvas-forge-cli/tests/: cli_commands.rs
crates/katana-canvas-forge/src/: exporter.rs  lib.rs  renderer.rs
crates/katana-canvas-forge/src/markdown/: diagram_js_runtime.rs  diagram_js_runtime_tests.rs  diagram_runtime.rs  mod.rs  runtime_assets.rs  svg_rasterize.rs  svg_rasterize_tests.rs  types.rs
crates/katana-canvas-forge/src/markdown/color_preset/: dark.rs  light.rs  mod.rs  types.rs
crates/katana-canvas-forge/src/markdown/drawio_renderer/: js_runtime.rs  js_runtime_resources.rs  js_runtime_resources_tests.rs  js_runtime_scripts.rs  js_runtime_tests.rs  mod.rs  types.rs
crates/katana-canvas-forge/src/markdown/export/: html.rs  html_template.rs  html_template_tests.rs  html_uri.rs  html_uri_tests.rs  image.rs  mod.rs  native_blocks.rs  native_blocks_tests.rs  native_document.rs  native_document_image.rs  native_document_tests.rs  native_style.rs  native_svg_root.rs  native_text.rs  native_text_parser.rs  native_text_parser_code.rs  native_text_parser_code_tests.rs  native_text_parser_html.rs  native_text_parser_html_tests.rs  native_text_parser_lines.rs  native_text_parser_lines_tests.rs  native_text_runs.rs  native_text_tests.rs  pdf.rs  pdf_tests.rs  regex_ops.rs  types.rs
crates/katana-canvas-forge/src/markdown/mermaid_renderer/: diagram_type.rs  js_runtime.rs  js_runtime_scripts.rs  js_runtime_tests.rs  mod.rs  render.rs  render_tests.rs  resolve.rs  zenuml_browser_runtime.rs  zenuml_browser_runtime_tests.rs  zenuml_v8_runtime.rs  zenuml_v8_runtime_tests.rs
crates/katana-canvas-forge/src/renderer/: api.rs  backends.rs  fingerprint.rs  metadata.rs  mod.rs  output.rs  runtime.rs
crates/katana-canvas-forge/src/system/: mod.rs  process.rs
crates/katana-canvas-forge/tests/: drawio_katana_transfer.rs  drawio_official_transfer.rs  exporter_transfer.rs  exporter_visual_transfer.rs  mermaid_katana_transfer.rs  renderer_transfer.rs
crates/katana-diagram-renderer/: Cargo.toml
crates/katana-diagram-renderer-cli/: Cargo.toml
crates/katana-diagram-renderer-cli/src/: commands.rs  diagram_cmd.rs  diagram_cmd_tests.rs  diagram_source.rs  file_ops.rs  main.rs  reference_cmd.rs
crates/katana-diagram-renderer-cli/src/system/: mod.rs
crates/katana-diagram-renderer-cli/tests/: cli_commands.rs
crates/katana-diagram-renderer/src/: lib.rs
crates/katana-diagram-renderer/src/markdown/: diagram_js_runtime.rs  diagram_js_runtime_tests.rs  mod.rs  runtime_assets.rs  runtime_assets_tests.rs  types.rs
crates/katana-diagram-renderer/src/markdown/drawio_renderer/: js_runtime_device_page_crop_tests.rs  js_runtime_floorplan_color_tests.rs  js_runtime_html_label_tests.rs  js_runtime_html_text_explicit_color_tests.rs  js_runtime_html_text_source_color_tests.rs  js_runtime_image_label_tests.rs  js_runtime_label_crop_tests.rs  js_runtime_neutral_color_tests.rs  js_runtime_page_crop_tests.rs  js_runtime_path_color_tests.rs  js_runtime_plain_text_label_tests.rs  js_runtime_shadow_tests.rs  js_runtime_shape_color_tests.rs  js_runtime_table_color_tests.rs  js_runtime_tests.rs  mod.rs
crates/katana-diagram-renderer/src/markdown/mermaid_renderer/: js_runtime.rs  js_runtime_reference_score_tests.rs  js_runtime_scripts.rs  js_runtime_scripts_class_tests.rs  js_runtime_tests.rs  render.rs  render_tests.rs  resolve.rs  types.rs  zenuml_v8_runtime_tests.rs
crates/katana-diagram-renderer/src/markdown/plantuml_renderer/: asset.rs  config.rs  mod.rs  runtime.rs  theme.rs  theme_catalog.rs  types.rs
crates/katana-diagram-renderer/src/renderer/: api.rs  backends.rs  fingerprint.rs  metadata.rs  mod.rs  output.rs  output_tests.rs  runtime.rs  runtime_path.rs
crates/katana-diagram-renderer/tests/: drawio_katana_transfer.rs  drawio_official_transfer.rs  mermaid_katana_transfer.rs  plantuml_renderer.rs  renderer_transfer.rs  wrapper_reexports.rs
crates/katana-render-runtime/: Cargo.toml
crates/katana-render-runtime-cli/: Cargo.toml
crates/katana-render-runtime-cli/src/: commands.rs  diagram_cmd_tests.rs  diagram_source.rs  file_ops.rs  main.rs  reference_cmd.rs
crates/katana-render-runtime-cli/tests/: cli_commands.rs
crates/katana-render-runtime/src/: lib.rs
crates/katana-render-runtime/src/markdown/: diagram_js_runtime.rs  mod.rs  runtime_assets.rs  runtime_assets_tests.rs  types.rs
crates/katana-render-runtime/src/markdown/color_preset/: dark.rs
crates/katana-render-runtime/src/markdown/drawio_renderer/: js_runtime.rs  js_runtime_color_tests.rs  js_runtime_edge_label_tests.rs  js_runtime_export_top_tests.rs  js_runtime_html_label_content_tests.rs  js_runtime_html_text_source_color_tests.rs  js_runtime_page_bounds_tests.rs  js_runtime_page_layout_crop_tests.rs  js_runtime_palette_color_tests.rs  js_runtime_path_color_tests.rs  js_runtime_plain_text_label_tests.rs  mod.rs
crates/katana-render-runtime/src/renderer/: api.rs  mod.rs  output.rs  runtime.rs  runtime_path.rs
crates/katana-render-runtime/tests/: drawio_katana_transfer.rs  drawio_official_transfer.rs  mathjax_renderer.rs  mermaid_katana_transfer.rs  plantuml_renderer.rs  renderer_transfer.rs
crates/kcf-linter/: Cargo.toml
crates/kcf-linter/src/: diagnostics.rs  lib.rs  syntax.rs  workspace.rs
crates/kcf-linter/src/rules/: architecture.rs  attributes.rs  cli_duplication.rs  error_first.rs  file_length.rs  function_length.rs  lazy_code.rs  manifest_boundary.rs  method_calls.rs  mod.rs  nesting_depth.rs  prohibited_types.rs  pub_free_fn.rs  type_separation.rs
crates/kcf-linter/tests/: ast_linter.rs  error_paths.rs  prohibited_type_rule.rs  rule_violations.rs
(+1163 files in other folders)
