[workspace]
members = [
    "crates/kcf-linter",
    "crates/katana-canvas-forge",
    "crates/katana-canvas-forge-cli",
]
resolver = "2"

[workspace.package]
version = "0.1.2"
edition = "2024"
license = "MIT"
repository = "https://github.com/HiroyukiFuruno/katana-canvas-forge"
rust-version = "1.95.0"
authors = ["Hiroyuki Furuno"]
description = "Versioned diagram rendering and document export runtime for KatanA (Mermaid, Draw.io, HTML/PDF/PNG/JPEG)."

[workspace.dependencies]
katana-ast-lint = "0.5.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
anyhow = "1"
tracing = "0.1"
clap = { version = "4", features = ["derive"] }
ignore = "0.4"
proc-macro2 = { version = "1", features = ["span-locations"] }
syn = { version = "2", features = ["full", "visit"] }
toml = "0.9"
base64 = "0.22"
image = { version = "0.25", default-features = false, features = ["jpeg", "png"] }
include_dir = "0.7.4"
mathjax_svg = "3.2.0"
regex = "1.12.3"
resvg = "0.47"
syntect = { version = "5", default-features = false, features = ["default-themes", "default-syntaxes", "regex-fancy"] }
tiny-skia = "0.12"
v8 = "=139.0.0"
xmltree = "0.12"
