[workspace]
members = [
    "crates/kdr-linter",
    "crates/katana-diagram-renderer",
    "crates/katana-diagram-renderer-cli",
]
resolver = "2"

[workspace.package]
version = "0.1.3"
edition = "2024"
license = "MIT"
repository = "https://github.com/HiroyukiFuruno/katana-diagram-renderer"
rust-version = "1.95.0"
authors = ["Hiroyuki Furuno"]
description = "Versioned diagram rendering runtime for KatanA (Mermaid, Draw.io, ZenUML)."

[workspace.dependencies]
katana-ast-lint = "0.5.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
anyhow = "1"
tracing = "0.1"
clap = { version = "4", features = ["derive"] }
ignore = "0.4"
proc-macro2 = { version = "1", features = ["span-locations"] }
syn = { version = "2", features = ["full", "visit"] }
toml = "1.1"
base64 = "0.22"
include_dir = "0.7.4"
resvg = "0.47"
tiny-skia = "0.12"
v8 = "=147.4.0"
xmltree = "0.12"
