[workspace]
members = [
    "crates/kdr-linter",
    "crates/katana-render-runtime",
    "crates/katana-render-runtime-cli",
]
resolver = "2"

[workspace.package]
version = "0.3.4"
edition = "2024"
license = "MIT"
repository = "https://github.com/HiroyukiFuruno/katana-render-runtime"
rust-version = "1.95.0"
authors = ["Hiroyuki Furuno"]
description = "Versioned render runtime for KatanA diagrams and math (Mermaid, Draw.io, ZenUML, PlantUML, MathJax)."

[workspace.dependencies]
katana-render-runtime = { path = "crates/katana-render-runtime", version = "0.3.4" }
katana-ast-lint = "0.5.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
anyhow = "1"
tracing = "0.1"
clap = { version = "4", features = ["derive"] }
ignore = "0.4"
proc-macro2 = { version = "1", features = ["span-locations"] }
syn = { version = "2", features = ["full", "visit"] }
toml = "1.1"
base64 = "0.22"
include_dir = "0.7.4"
jni = { version = "0.22.4", features = ["invocation"] }
resvg = "0.47"
sha2 = "0.11"
tiny-skia = "0.12"
ureq = { version = "3.3", default-features = false, features = ["rustls"] }
v8 = "=149.0.0"
xmltree = "0.12"
