[package]
name = "katana-diagram-renderer"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
authors.workspace = true
description = "Compatibility wrapper for katana-render-runtime."
include = [
    "Cargo.toml",
    "src/lib.rs",
]

[lib]
path = "src/lib.rs"

[dependencies]
katana-render-runtime = { workspace = true }
