[package]
name = "katana-render-runtime-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
authors.workspace = true
description = "CLI front-end for katana-render-runtime: render, reference-update, compare, bench."

[[bin]]
name = "krr"
path = "src/main.rs"

[dependencies]
katana-render-runtime = { workspace = true }
clap = { workspace = true }
anyhow = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
