[package]
name = "kcf-linter"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
authors.workspace = true
description = "Structural linter for renderer and export runtime boundaries."
publish = false

[lib]
path = "src/lib.rs"

[dependencies]
ignore = { workspace = true }
katana-ast-lint = { workspace = true }
proc-macro2 = { workspace = true }
syn = { workspace = true }
thiserror = { workspace = true }
toml = { workspace = true }
